--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev:frontend": "cd Frontend && npm run dev",
     "dev:backend": "cd Backend && npm run dev",
-    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\""
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "build:frontend": "cd Frontend && npm install && npm run build"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
