--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.6.4",
     "astro": "^5.16.9"
   },
   "description": "```sh npm create astro@latest -- --template minimal ```",
